--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "angularSeedApp",
     "version": "0.0.0",
     "dependencies": {
+        "heatmapjs": "^2.0.2",
         "npm": "^6.5.0"
     },
     "scripts": {
